--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>uiLibary</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/style.css" >
+    <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/parts/_reset.css" >
+    <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/parts/_container.css" >
+    <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/parts/_main.css" >
+    <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/parts/_main.css" >
+    <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/parts/_sections.css" >
+    <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/parts/_button.css" >
+    <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/parts/_title.css" >
+    <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/parts/_tooltip.css" >
 </head>
 <body>
 
