--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/style.css" >
 </head>
 <body>
+<form action="sendform.php" method="POST">
+    <input type="text" name="name" placeholder="Введите имя"><br>
+    <input type="text" name="phone" placeholder="Введите телефон"><br>
+    <input type="submit">
+</form>
 
     <div class="container">
 
