--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>uiLibary</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/style.css" >
+    <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/style1.css" >
 </head>
 <body>
 <form action="https://varfomoleev.github.io/uiLibary/sendform.php" method="POST">
