--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>uiLibary</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://varfomoleev.github.io/uiLibary/style.css" >
-    <link rel="preconnect" href="https://varfomoleev.github.io/uiLibary/sendform.php">
+    <link href="https://varfomoleev.github.io/uiLibary/sendform.php" >
 </head>
 <body>
 <form action="sendform.php" method="POST">
